--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ bin/Debug/Text Crypter.vshost.exe.manifest
 obj/x86/Debug/TextCrypter.csproj.FileListAbsolute.txt
 obj/x86/Debug/TextCrypter.Properties.Resources.resources
 obj/x86/Debug/KeyboardTrans.Form1.resources
+bin/Release/Text Crypter.zip
+obj/x86/Release/KeyboardTrans.AboutBox1.resources
+obj/x86/Release/KeyboardTrans.Form1.resources
+bin/Release/Text Crypter.vshost.exe
+bin/Release/Text Crypter.vshost.exe.manifest
+obj/x86/Release/TextCrypter.csproj.FileListAbsolute.txt
+obj/x86/Release/Text Crypter.exe
+obj/x86/Release/TextCrypter.Properties.Resources.resources
