--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ obj/x86/Release/TextCrypter.csproj.FileListAbsolute.txt
 obj/x86/Release/Text Crypter.exe
 obj/x86/Release/TextCrypter.Properties.Resources.resources
 TextCrypter.suo
+TextCrypter.suo
